--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,28 @@
     color: white;
 }
 
+.btn-secondary-red{
+    background-color: #707070;
+    color: white;
+}
+.btn-secondary-red:hover{
+    background-color:#dc3545 ;
+    border-color: #dc3545;
+    transition: 0.5s;
+    color: white;
+}
+
+.btn-primary-red{
+    background-color: #0167F3;
+    color: white;
+}
+.btn-primary-red:hover{
+    background-color:#dc3545 ;
+    border-color: #dc3545;
+    transition: 0.5s;
+    color: white;
+}
+
 .btn-secondary{
     background-color: #707070;
     color: white;
