--- a/src/app/components/card1/card1.component.html
+++ b/src/app/components/card1/card1.component.html
@@ -13,10 +13,10 @@
     </div>
     
     <div class="card-body">
-        <h5 class="card-title">پرینتر برند Brother</h5>
+        <h5 class="card-title">{{ title }}</h5>
         <div dir="ltr" class="d-flex">
             <span class="">تومان</span>
-            <p class="card-text px-2">3.500</p>
+            <p class="card-text px-2">{{ price }}</p>
         </div>
     </div>
 
