--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,1 +1,30 @@
-<p>main-page works!</p>
+<app-header></app-header>
+
+<div class="my-5">
+    <div class="d-flex justify-content-center">
+        <h2>محصولات پرطرفدار</h2>
+    </div>
+    
+    <div class="d-flex justify-content-center mt-4">
+        <a class="btn btn-black mx-2" >اداری</a>
+        <a class="btn btn-black mx-2" >شخصی</a>
+        <a class="btn btn-black mx-2" >پرطرفدار</a>
+        <a class="btn btn-black mx-2" >جدید</a>
+    </div>
+</div>
+
+<div class="container d-flex justify-content-between www flex-wrap">
+    <app-card1 [discount]="true"></app-card1>
+    <app-card1></app-card1>
+    <app-card1 [new]="true"></app-card1>
+    <app-card1></app-card1>
+    <app-card1 [hot]="true" [title]="'مبین'"></app-card1>
+    <app-card1></app-card1>
+</div>
+
+<div class="sepetator text-center text-white bg-black">
+    <h2>بزرگترین وبسایت فروش لوازم اداری E-OFFICE</h2>
+    <p class="my-5">با پوشش حداکثری تمام برندهای محبوب و پرطرفدار ایران</p>
+    <a class="btn btn-primary-gold btn-lg">!خرید را آغاز کنید</a>
+</div>
+<app-footer></app-footer>
