--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -39,6 +39,6 @@
     padding: 22px 20px 22px 20px;
 }
 .header-down a:hover{
-    background-color: #D2B558;
+    background-color: #0167F3;
     transition: .15s ease-in-out;
 }
