--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,75 @@
-<p>about works!</p>
+
+<div class="Main d-flex align-items-center">
+  <div class="container">
+    <div class="d-flex mt-4 font">
+      <h1 class="font">درباره ما</h1>
+    </div>
+
+    <div class="d-flex font">
+      <p class="font">ای افلس بهترین تامين کننده تجهیزات اداری اورجینال با بهترین خدمات پس از فروش در ایران</p>
+    </div>
+
+    <div class="mt-4">
+    </div>
+  </div>
+
+
+</div>
+
+<!-- <div class="container">
+  <div class="row align-items-center">
+    <div>
+      <h3 class="col-4 mt-5 font-black">درباره ما</h3>
+    </div>
+
+    <div class="Mainpic col-8">
+      <img src="assets/group-people-working-out-business-plan-office.jpg" alt="">
+    </div>
+
+    <div  class="col-4 font-black">
+      <p> تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
+    </div>
+
+    <div class="col-6 mx-4 d-flex justify-content-center">
+      <button class="btn btn-secondary-blue mx-3"> بازگشت </button>
+
+      <button class="btn btn-secondary-blue"> بیشتر </button>
+
+    </div>
+  </div>
+
+</div> -->
+
+<div class="container">
+
+  <div class="d-flex row-reverse">
+    <div class="d-flex row col-6">
+      <div class="d-flex row mt-5 col-10 justify-content-center">
+        <div class="font-black"><h3>درباره ما</h3></div>
+
+        <div>
+          <p class="font-black">
+            تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+        </p>
+        </div>
+
+        <div class="col-6 mx-4 row-reverse">
+          <button class="btn btn-secondary-blue mx-3"> بازگشت </button>
+
+      <button class="btn btn-secondary-blue"> بیشتر </button>
+
+        </div>
+
+      </div>
+    </div>
+
+    <div  class="d-flex row justify-content-flex-end">
+        <div class="d-flex row mt-5 col-10 align-items-center">
+
+          <p class="font-black">
+            تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+        </p>
+        </div>
+    </div>
+  </div>
+</div>
