--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,147 @@
-<p>contact works!</p>
+<!-- هدر -->
+<div class="Main d-flex align-items-center">
+  <div class="container">
+    <div class="d-flex mt-4 font">
+      <h1 class="font">تماس با ما</h1>
+    </div>
+
+    <div class="d-flex font">
+      <p class="font">.فقط کافیه یک خط برای ما بگذارید، ما آماده خواهیم شد تا به سوالات شما پاسخ دهیم </p>
+    </div>
+
+    <div class="mt-4">
+    </div>
+  </div>
+
+
+</div>
+
+<section class="d-flex ">
+
+  <!-- گرید اصلی صفحه -->
+  <div class="container">
+
+    <div class="d-flex row-reverse">
+      <div class="d-flex row col-6">
+        <div class="d-flex row mt-5 col-12 justify-content-center">
+          <div class="font-black"><h3>پیامی برای‌ما ارسال کنید</h3></div>
+
+          <div class="d-flex column font-black mt-3">
+            <Label class="d-flex ">نام</Label>
+            <Label class="d-flex col-12 mx-5 justify-content-center">نام خانوادگی</Label>
+
+          </div>
+
+          <div class="d-flex font-black mt-3">
+            <div>
+              <input class="" type="Name">
+            </div>
+
+            <div class="d-flex justify-content-center col-9">
+              <input class="" type="LastName">
+            </div>
+
+
+          </div>
+
+
+          <div class="d-flex column font-black mt-3">
+            <Label class="d-flex ">نام</Label>
+            <Label class="d-flex col-12 mx-5 justify-content-center">نام خانوادگی</Label>
+
+          </div>
+
+          <div class="d-flex font-black mt-3">
+            <div>
+              <input class="" type="Name">
+            </div>
+
+            <div class="d-flex justify-content-center col-9">
+              <input class="" type="LastName">
+            </div>
+
+
+          </div>
+          <div class="font-black mt-3">
+            <Label class="">نام</Label>
+            <br>
+            <br>
+            <input class="col-11" type="Name">
+          </div>
+
+  <!-- بخش باتن های ثابت صفحه -->
+          <div class="col-12 font d-flex mt-5">
+            <div class="">
+              <button class="btn btn-secondary-blue"> بازگشت </button>
+            </div>
+
+              <div class="mx-4">
+                <button class="btn btn-secondary-blue"> بیشتر </button>
+              </div>
+
+
+          </div>
+
+        </div>
+      </div>
+
+      <!-- <div  class="d-flex row col-9 mt-5 justify-content-center">
+          <div class="d-flex row Mainpic">
+              <div class="font mt-4 d-flex justify-content-center">
+                <h3>راه های ارتباطی</h3>
+
+
+
+              </div>
+
+              <div class="d-flex mt-5">
+
+                <div class="font mt-3">
+                  <p class=""> ایمیل</p>
+                </div>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="d-flex justify-content-center align-items-center col-7">
+    <!-- شیپ زاویه دار -->
+    <div class="d-flex PerspectiveDiv Mainpic">
+
+    </div>
+    <!--  -->
+    <div  class="bg-black text-white p-5 borderR">
+      <div  class="d-flex justify-content-center">
+        <h3>راه های ارتباطی</h3>
+      </div>
+      <br>
+      <div class="d-flex font">
+        <img class="mt-1 mx-3" src="../../../assets/img/placeholder.png" width="20px" height="20px" alt="">
+        <h4 class="d-flex">نیشابور- بلوار فضل</h4>
+
+      </div>
+      <br>
+      <div  class="d-flex font">
+        <img  class="mt-1 mx-3" src="../../../assets/img/phone-call (1).png" width="20px" height="20px" alt="">
+       <h4>0099112355136</h4>
+
+      </div>
+      <br>
+      <div  class="d-flex font">
+        <img class="mt-1 mx-3" src="../../../assets/img/envelope.png"  width="20px" height="20px" alt="">
+
+        <h4>site-info@gmail.com</h4>
+
+      </div>
+      <br>
+      <div class="d-flex">
+        <img  class="mt-1 mx-3" src="../../../assets/img/facebook.png" width="15px" height="15px" alt="">
+        <img  class="mt-1 mx-3" src="../../../assets/img/linkedin.png" width="15px" height="15px" alt="">
+        <img  class="mt-1 mx-3" src="../../../assets/img/email (1).png"  width="15px" height="15px" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</section>
