--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="Main d-flex align-items-center">
   <div class="container">
     <div class="d-flex mt-4 font">
-      <h1 class="font">تماس با ما</h1>
+      <h1 class="font">ارتباط با ما</h1>
     </div>
 
     <div class="d-flex font">
@@ -16,19 +16,19 @@
 
 </div>
 
-<section class="d-flex ">
+<section class="d-flex mt-5">
 
   <!-- گرید اصلی صفحه -->
   <div class="container">
 
     <div class="d-flex row-reverse">
       <div class="d-flex row col-6">
-        <div class="d-flex row mt-5 col-12 justify-content-center">
-          <div class="font-black"><h3>پیامی برای‌ما ارسال کنید</h3></div>
+        <div class="d-flex row mt-2 col-12 justify-content-center">
+          <div class="font-black Opacity"><h3>پیامی برای‌ما ارسال کنید</h3></div>
 
           <div class="d-flex column font-black mt-3">
-            <Label class="d-flex ">نام</Label>
-            <Label class="d-flex col-12 mx-5 justify-content-center">نام خانوادگی</Label>
+            <Label class="d-flex Opacity">نام</Label>
+            <Label class="d-flex col-12 mx-5 justify-content-center Opacity">نام خانوادگی</Label>
 
           </div>
 
@@ -46,8 +46,8 @@
 
 
           <div class="d-flex column font-black mt-3">
-            <Label class="d-flex ">نام</Label>
-            <Label class="d-flex col-12 mx-5 justify-content-center">نام خانوادگی</Label>
+            <Label class="d-flex Opacity">ایمیل</Label>
+            <Label class="d-flex col-12 mx-4 justify-content-center Opacity">عنوان پیام</Label>
 
           </div>
 
@@ -62,21 +62,21 @@
 
 
           </div>
-          <div class="font-black mt-3">
-            <Label class="">نام</Label>
+          <div class="font-black mt-3 Opacity">
+            <Label class="">توضیحات</Label>
             <br>
             <br>
-            <input class="col-11" type="Name">
+            <input class="col-11 ExpInput" type="Name">
           </div>
 
   <!-- بخش باتن های ثابت صفحه -->
           <div class="col-12 font d-flex mt-5">
             <div class="">
-              <button class="btn btn-secondary-blue"> بازگشت </button>
+              <button class="btn btn-primary"> ثبت </button>
             </div>
 
               <div class="mx-4">
-                <button class="btn btn-secondary-blue"> بیشتر </button>
+                <button class="btn btn-black"> بازگشت </button>
               </div>
 
 
@@ -105,43 +105,50 @@
     </div>
   </div> -->
 
-  <div class="d-flex justify-content-center align-items-center col-7">
-    <!-- شیپ زاویه دار -->
-    <div class="d-flex PerspectiveDiv Mainpic">
+  <div class="d-flex justify-content-center align-items-center col-7 ">
 
-    </div>
-    <!--  -->
-    <div  class="bg-black text-white p-5 borderR">
+    <div  class="bg-black text-white p-5 mt-2 borderR MainDiv">
+         <!-- شیپ زاویه دار -->
+ <!-- <div class="container ">
+  <div class="d-flex PerspectiveDiv Mainpic font">
+  </div>
+</div> -->
+
+<!--  -->
       <div  class="d-flex justify-content-center">
         <h3>راه های ارتباطی</h3>
       </div>
       <br>
-      <div class="d-flex font">
+      <div class="d-flex font my-2">
         <img class="mt-1 mx-3" src="../../../assets/img/placeholder.png" width="20px" height="20px" alt="">
         <h4 class="d-flex">نیشابور- بلوار فضل</h4>
 
       </div>
       <br>
-      <div  class="d-flex font">
+      <div  class="d-flex font my-2">
         <img  class="mt-1 mx-3" src="../../../assets/img/phone-call (1).png" width="20px" height="20px" alt="">
        <h4>0099112355136</h4>
 
       </div>
       <br>
-      <div  class="d-flex font">
+      <div  class="d-flex font my-2">
         <img class="mt-1 mx-3" src="../../../assets/img/envelope.png"  width="20px" height="20px" alt="">
 
         <h4>site-info@gmail.com</h4>
 
       </div>
       <br>
-      <div class="d-flex">
+      <div class="d-flex font">
         <img  class="mt-1 mx-3" src="../../../assets/img/facebook.png" width="15px" height="15px" alt="">
         <img  class="mt-1 mx-3" src="../../../assets/img/linkedin.png" width="15px" height="15px" alt="">
         <img  class="mt-1 mx-3" src="../../../assets/img/email (1).png"  width="15px" height="15px" alt="">
       </div>
     </div>
   </div>
+
 </div>
+
 </div>
+
+
 </section>
