--- a/src/app/pages/main-page/main-page.component.css
+++ b/src/app/pages/main-page/main-page.component.css
@@ -6,7 +6,47 @@
 .sepetator{
     padding: 200px 0 200px 0;
 }
-section{
-    background-color: #7070700a;
-    margin: 0 !important;
+.hr{
+    width: 170px;
+    height: 3px;
+    border: none;
+    background-color: #0167F3;
+}
+.hr2{
+    width: 100px;
+    height: 3px;
+    border: none;
+    background-color: #0167F3;
+}
+.c-1{
+    width: 300px;
+    height: 300px;
+    background-color: #0167F3;
+    border-radius: 50%;
+    filter: blur(10px);
+    position: absolute;
+    top: 50px;
+    left: 0px;
+}
+.c-2{
+    width: 200px;
+    height: 200px;
+    background-color: #154383;
+    border-radius: 50%;
+    filter: blur(9px);
+    position: absolute;
+    top: 250px;
+    left: 200px;
+}
+.next-pre{
+    background-color: white;
+    padding: 11px 15px 15px 15px;
+    border-radius: 50%;
+    border: 1px solid rgb(185, 185, 185);
+}
+.bottom-header img{
+    position: absolute;
+    left: -20px;
+    bottom: -20px;
+    width: 250px;
 }
