--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -108,13 +108,13 @@
   <div class="d-flex justify-content-center align-items-center col-7 ">
 
     <div  class="bg-black text-white p-5 mt-2 borderR MainDiv">
-         <!-- شیپ زاویه دار -->
- <!-- <div class="container ">
-  <div class="d-flex PerspectiveDiv Mainpic font">
+   <!-- شیپ زاویه دار -->
+   <div class="container col-7">
+    <div class="d-flex PerspectiveDiv Mainpic font">
+    </div>
   </div>
-</div> -->
 
-<!--  -->
+  <!--  -->
       <div  class="d-flex justify-content-center">
         <h3>راه های ارتباطی</h3>
       </div>
