--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="footer-up py-5">
+    <div class="footer-up">
         <div class="d-flex justify-content-between container ">
             <div class="d-flex flex-column align-items-center" (mouseenter)="healthyEnter()" (mouseleave)="healthyLeave()">
                 <img src="../../../assets/img/shield-check.png" width="120" [style.transform]="'scale('+healthy+')'">
