--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -41,7 +41,7 @@
             <img src="../../../assets/img/kisspng-computer-mouse-logitech-unifying-receiver-wireless-comfortable-sleep-5ade714f8d1161.4665338815245274395778.png" alt="">
         </div>
 
-        <div class="col-3 bg-white position-relative bottom-header d-flex flex-column align-items-end overflow-hidden">
+        <div class="col-3 bg-white position-relative bottom-header d-flex flex-column align-items-end overflow-hidden p-4">
             <h3 class="display-3 fw-bolder text-primary">راحت</h3>
             <h5 style="margin-right: 100px;" class="mt-3 mb-5">!کلیک کن</h5>
 
@@ -51,7 +51,7 @@
             <img src="../../../assets/img/kisspng-computer-mouse-logitech-unifying-receiver-wireless-comfortable-sleep-5ade714f8d1161.4665338815245274395778.png" alt="">
         </div>
 
-        <div class="col-3 bg-white position-relative bottom-header d-flex flex-column align-items-end overflow-hidden">
+        <div class="col-3 bg-white position-relative bottom-header d-flex flex-column align-items-end overflow-hidden p-4">
             <h3 class="display-3 fw-bolder text-primary">راحت</h3>
             <h5 style="margin-right: 100px;" class="mt-3 mb-5">!کلیک کن</h5>
 
@@ -91,7 +91,7 @@
     <div class="sepetator text-center text-white bg-black">
         <h2>بزرگترین وبسایت فروش لوازم اداری E-OFFICE</h2>
         <p class="my-5">با پوشش حداکثری تمام برندهای محبوب و پرطرفدار ایران</p>
-        <a class="btn btn-primary-gold btn-lg">!خرید را آغاز کنید</a>
+        <a class="btn btn-primary-gold btn-lg rounded-0">!خرید را آغاز کنید</a>
     </div>
 
 
