--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,50 @@
-<p>products works!</p>
+<app-header></app-header>
+
+<div style="background-color: #E4E4E4; margin-top: px;" class="py-4">
+    <div class="container mb-5 mt-2">
+        <div class="d-flex flex-column align-items-end">
+            <h3 class="display-6 mx-5 mb-4">دسته بندی ها</h3>
+            <div class="d-flex justify-content-end" style="width: 1000px;">
+                <app-card2 class="mx-4"></app-card2>
+                <app-card2 class="mx-4"></app-card2>
+                <app-card2 class="mx-4"></app-card2>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="www container d-flex flex-column">
+    <div class="d-flex justify-content-between">
+        <p class="text-secondary" dir="rtl">1634 کالا</p>
+
+        <div class="d-flex">
+            <p class="mx-2">فیلتر ها</p>
+            <img src="../../../assets/img/filter1.png" alt="filer" width="25px" height="25px">
+        </div>
+        <p>گرانترین</p>
+        <p>ارزان ترین</p>
+        <p>پرفروش ترین</p>
+        <p>جدیدترین</p>
+        <p>پربازیدترین</p>
+        <p>مرتبط سازی</p>
+
+        <div class="d-flex">
+            <h5 class="mx-2 fw-bold">:مرتب سازی</h5>
+            <img src="../../../assets/img/filter2.png" alt="filter" width="25px" height="25px">
+        </div>
+    </div>
+
+    <span style="height: 3px; background-color: #E4E4E4;" class="mb-4"></span>
+
+    <div class="d-flex justify-content-between align-items-start flex-wrap">
+    
+        <app-card1 [discount]="true" class="mb-5"></app-card1>
+        <app-card1></app-card1>
+        <app-card1 [new]="true"></app-card1>
+        <app-card1></app-card1>
+        <app-card1 [hot]="true" [title]="'مبین'"></app-card1>
+        <app-card1></app-card1>
+    </div>
+</div>
+
+<app-footer></app-footer>
