--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -39,37 +39,45 @@
   </div>
 
 </div> -->
+<section class="container mt-4">
+  <div>
 
-<div class="container">
+    <div class="d-flex row-reverse">
+      <div class="d-flex row col-6">
+        <div class="d-flex row mt-5 col-10 justify-content-center">
+          <div class="font-black Opacity"><h3>درباره ما</h3></div>
 
-  <div class="d-flex row-reverse">
-    <div class="d-flex row col-6">
-      <div class="d-flex row mt-5 col-10 justify-content-center">
-        <div class="font-black"><h3>درباره ما</h3></div>
+          <div>
+            <p class="font-black Opacity">
+              تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+          </p>
+          </div>
 
-        <div>
-          <p class="font-black">
-            تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-        </p>
+          <div class="col-6 mx-4">
+            <button class="btn btn-black mx-3"> بازگشت </button>
+
+        <button class="btn btn-primary"> بیشتر </button>
+
+          </div>
+
         </div>
+      </div>
 
-        <div class="col-6 mx-4 row-reverse">
-          <button class="btn btn-secondary-blue mx-3"> بازگشت </button>
-
-      <button class="btn btn-secondary-blue"> بیشتر </button>
-
-        </div>
-
+      <div  class="d-flex justify-content-center">
+          <div class="d-flex mt-5 col-2 align-items-center">
+              <img src="../../../assets/img/group-people-working-out-business-plan-office.jpg" alt="">
+    <!-- شیپ زاویه دار -->
+    <div class="row">
+      <div class="col-10 PerspectiveDiv Mainpic font">
       </div>
     </div>
 
-    <div  class="d-flex row justify-content-flex-end">
-        <div class="d-flex row mt-5 col-10 align-items-center">
+    <!--  -->
+          </div>
 
-          <p class="font-black">
-            تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-        </p>
-        </div>
+      </div>
     </div>
   </div>
-</div>
+
+
+</section>
