--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -70,7 +70,7 @@
           </div>
 
   <!-- بخش باتن های ثابت صفحه -->
-          <div class="col-12 font d-flex mt-5">
+          <div class="font d-flex">
             <div class="">
               <button class="btn btn-primary"> ثبت </button>
             </div>
