--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -3,13 +3,6 @@
   height: 20%;
 }
 
-.Mainpic{
-width: 300px;
-height: 350px;
-background-color: #0167f3;
-transform: rotate(15deg);
-border-radius: 5px;
-}
 
 .font{
   direction: rtl;
@@ -29,15 +22,6 @@ color: #1d1d1d;
   background-color: #0167f3;
 }
 
-.PerspectiveDiv{
-  position: absolute;
-
-}
-
-.MainRelative{
-  position: relative;
-}
-
 .Opacity{
   opacity: 75%;
 }
@@ -50,4 +34,12 @@ color: #1d1d1d;
   height: 450px;
 }
 
-
+.triangle{
+  width: 300px;
+  height: 350px;
+  background-color: #0167f3;
+  z-index: -1;
+  position: absolute;
+  transform: rotate(15deg);
+  top: 0;
+}
