--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<!-- هدر -->
+<!-- Header -->
 <div class="Main d-flex align-items-center">
   <div class="container">
     <div class="d-flex mt-4 font">
@@ -26,51 +26,41 @@
         <div class="d-flex row mt-2 col-12 justify-content-center">
           <div class="font-black Opacity"><h3>پیامی برای‌ما ارسال کنید</h3></div>
 
-          <div class="d-flex column font-black mt-3">
-            <Label class="d-flex Opacity">نام</Label>
-            <Label class="d-flex col-12 mx-5 justify-content-center Opacity">نام خانوادگی</Label>
-
-          </div>
-
-          <div class="d-flex font-black mt-3">
-            <div>
-              <input class="" type="Name">
+          <div class="d-flex mt-3 justify-content-between">
+            <div class="col-5" dir="rtl">
+                <label for="">نام</label>
+              <input class="form-control" type="Name">
             </div>
 
-            <div class="d-flex justify-content-center col-9">
-              <input class="" type="LastName">
+            <div class="col-5" dir="rtl">
+                <label for="">نام خانوادگی</label>
+              <input class="form-control" type="LastName">
             </div>
 
 
           </div>
 
 
-          <div class="d-flex column font-black mt-3">
-            <Label class="d-flex Opacity">ایمیل</Label>
-            <Label class="d-flex col-12 mx-4 justify-content-center Opacity">عنوان پیام</Label>
-
-          </div>
-
-          <div class="d-flex font-black mt-3">
-            <div>
-              <input class="" type="Name">
+          <div class="d-flex mt-3 justify-content-between">
+            <div class="col-5" dir="rtl">
+                <label for="">ایمیل</label>
+              <input class="form-control" type="Name">
             </div>
 
-            <div class="d-flex justify-content-center col-9">
-              <input class="" type="LastName">
+            <div class="col-5" dir="rtl">
+                <label for="">عنوان</label>
+              <input class="form-control" type="LastName">
             </div>
 
 
           </div>
-          <div class="font-black mt-3 Opacity">
-            <Label class="">توضیحات</Label>
-            <br>
-            <br>
-            <input class="col-11 ExpInput" type="Name">
+          <div class="font-black mt-3">
+            <Label>توضیحات</Label>
+            <textarea class="form-control" cols="60" rows="10"></textarea>
           </div>
 
   <!-- بخش باتن های ثابت صفحه -->
-          <div class="font d-flex">
+          <div class="font d-flex my-3">
             <div class="">
               <button class="btn btn-primary"> ثبت </button>
             </div>
@@ -85,33 +75,15 @@
         </div>
       </div>
 
-      <!-- <div  class="d-flex row col-9 mt-5 justify-content-center">
-          <div class="d-flex row Mainpic">
-              <div class="font mt-4 d-flex justify-content-center">
-                <h3>راه های ارتباطی</h3>
 
-
-
-              </div>
-
-              <div class="d-flex mt-5">
-
-                <div class="font mt-3">
-                  <p class=""> ایمیل</p>
-                </div>
-              </div>
-          </div>
-      </div>
-    </div>
-  </div> -->
-
-  <div class="d-flex justify-content-center align-items-center col-7 ">
+  <div class="d-flex justify-content-center
+         align-items-center col-7 position-relative"
+         style="z-index: 2;">
 
     <div  class="bg-black text-white p-5 mt-2 borderR MainDiv">
    <!-- شیپ زاویه دار -->
    <div class="container col-7">
-    <div class="d-flex PerspectiveDiv Mainpic font">
-    </div>
+    <span class="triangle"></span>
   </div>
 
   <!--  -->
