--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -20,6 +20,7 @@
             <div>
                 <h2>{{information.title}}</h2>
                 <p>{{information.description }}</p>
+                <img class="image" [src]="information.url" alt="">
             </div>
 
             <select class="form-select" aria-label="Default select example">
