--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class=" page container">
         <div>
             <div class="d-flex justify-content-between">
                 <h1>کالا</h1>
@@ -23,7 +23,7 @@
                 <img class="image" [src]="information.url" alt="">
             </div>
 
-            <select class="form-select" aria-label="Default select example">
+            <select id="input" class="form-select" aria-label="Default select example">
                 <option value="0">0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
