--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -17,3 +17,16 @@
     width: 90px;
     height: 60px;
 }
+.total{
+    margin-right: 1200px;
+ }
+ .input{
+     margin-right: 500px;
+    width: 900px;
+    height: 90px;
+}
+.buten{
+    margin-top: 30px;
+    margin-right: 1050px;
+    margin-bottom: 30px;
+}
