--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -28,12 +28,12 @@
 
           <div class="d-flex mt-3 justify-content-between">
             <div class="col-5" dir="rtl">
-                <label for="">نام</label>
+                <label  class="my-3" for="">نام</label>
               <input class="form-control" type="Name">
             </div>
 
             <div class="col-5" dir="rtl">
-                <label for="">نام خانوادگی</label>
+                <label class="my-3" for="">نام خانوادگی</label>
               <input class="form-control" type="LastName">
             </div>
 
@@ -43,19 +43,19 @@
 
           <div class="d-flex mt-3 justify-content-between">
             <div class="col-5" dir="rtl">
-                <label for="">ایمیل</label>
+                <label  class="my-3" for="">ایمیل</label>
               <input class="form-control" type="Name">
             </div>
 
             <div class="col-5" dir="rtl">
-                <label for="">عنوان</label>
+                <label  class="my-3" for="">عنوان</label>
               <input class="form-control" type="LastName">
             </div>
 
 
           </div>
           <div class="font-black mt-3">
-            <Label>توضیحات</Label>
+            <Label  class="my-3">توضیحات</Label>
             <textarea class="form-control" cols="60" rows="10"></textarea>
           </div>
 
