--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -43,7 +43,7 @@
   <div>
 
     <div class="d-flex row-reverse">
-      <div class="d-flex row col-6">
+      <div class="d-flex row col-7">
         <div class="d-flex row mt-5 col-10 justify-content-center">
           <div class="font-black Opacity"><h3>درباره ما</h3></div>
 
@@ -53,26 +53,33 @@
           </p>
           </div>
 
-          <div class="col-6 mx-4">
-            <button class="btn btn-black mx-3"> بازگشت </button>
+          <div class="d-flex font">
+            <div class="">
+              <button class="col-12 btn btn-primary"> بیشتر </button>
+            </div>
+            <div class="mx-3">
+              <button class="col-12 btn btn-black"> بازگشت </button>
+            </div>
 
-        <button class="btn btn-primary"> بیشتر </button>
+
+
 
           </div>
 
         </div>
       </div>
 
-      <div  class="d-flex justify-content-center">
-          <div class="d-flex mt-5 col-2 align-items-center">
-              <img src="../../../assets/img/group-people-working-out-business-plan-office.jpg" alt="">
-    <!-- شیپ زاویه دار -->
-    <div class="row">
-      <div class="col-10 PerspectiveDiv Mainpic font">
+      <div  class="d-flex justify-content-center col-4">
+          <div class="d-flex mt-5 col-12 align-items-center">
+             <!-- شیپ زاویه دار -->
+    <div class="d-flex col-3">
+      <div class="triangle">
       </div>
     </div>
 
-    <!--  -->
+            <!--  -->
+              <img class="BorderR" src="../../../assets/img/group-people-working-out-business-plan-office.jpg" alt="">
+
           </div>
 
       </div>
