--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -34,11 +34,13 @@
             </div>
         </div>
         <hr>
-        <div class="input">
-            <label for=""> کد تخفیف : </label>
-            <input type="text">
+        <div class="discount">
+            <div class="b">
+                <label  for=""> کد تخفیف : </label>
+                <input type="text">
+            </div>
+            <p class="total"> جمع:3785000</p>
         </div>
-        <p class="total"> جمع:3785000</p>
         
         <div class="buten d-flex justify-content-around col-2 ">
             <button class=" btn btn-secondary-red mx-3">بازگشت</button>
