--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -49,6 +49,8 @@
     </div>
 </div>
 <div [hidden]="flag">
-    <h1>hiiiii</h1>
+    <img class="shopping" src="../.../../../../assets/img/30-printer-png-image.png" alt="">
+    <h4>!سبد خرید شما خالی است </h4>
+    <p>می توانید برای مشاهده محصولات بیشتر به صفحات زیر بروید </p>
 
 </div>
