--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -38,3 +38,9 @@
 .b{
     margin-right: 500px;
 }
+.shopping{
+    margin-top: 90px;
+    margin-left: 500px;
+    width: 400px;
+    height: 300px;
+}
