--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -44,7 +44,7 @@
 
     <div class="d-flex row-reverse">
       <div class="d-flex row col-7">
-        <div class="d-flex row mt-5 col-10 justify-content-center">
+        <div class="d-flex row mt-5 col-10 justify-content-center align-items-end">
           <div class="font-black Opacity"><h3>درباره ما</h3></div>
 
           <div>
@@ -55,10 +55,10 @@
 
           <div class="d-flex font">
             <div class="">
-              <button class="col-12 btn btn-primary"> بیشتر </button>
+              <button class="btn btn-primary"> بیشتر </button>
             </div>
-            <div class="mx-3">
-              <button class="col-12 btn btn-black"> بازگشت </button>
+            <div class="mx-4">
+              <button class="btn btn-black"> بازگشت </button>
             </div>
 
 
@@ -69,20 +69,22 @@
         </div>
       </div>
 
-      <div  class="d-flex justify-content-center col-4">
-          <div class="d-flex mt-5 col-12 align-items-center">
+      <div  class="d-flex justify-content-center col-4 position-relative mt-5">
+        <div class="d-flex mt-5 col-12 align-items-center ">
              <!-- شیپ زاویه دار -->
-    <div class="d-flex col-3">
-      <div class="triangle">
-      </div>
-    </div>
+          <div class="d-flex col-3 ">
+            <div class="triangle">
+            </div>
+          </div>
 
             <!--  -->
-              <img class="BorderR" src="../../../assets/img/group-people-working-out-business-plan-office.jpg" alt="">
+          <img class="BorderR" src="../../../assets/img/group-people-working-out-business-plan-office.jpg" alt="">
 
           </div>
 
       </div>
+
+
     </div>
   </div>
 
