--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,72 @@
 <p>product works!</p>
+
+<!-- Mahdi's Code -->
+
+<section class="container border BorderR">
+  <div class="p-3">
+
+    <div dir="rtl">
+      <h5>
+        محصولات مرتبط
+      </h5>
+    </div>
+      <div class="d-flex justify-content-flex-start">
+        <span class="d-flex next-pre shadow LeftArrow">
+          <img src="../../../assets/img/left.png" width="20px" height="20px">
+        </span>
+
+        <span class="next-pre shadow RightArrow">
+          <img src="../../../assets/img/right.png" width="20px" height="20px">
+        </span>
+
+        <hr class="d-flex justify-content-center HRBlue position-absulote">
+      </div>
+
+
+    <div class="d-flex align-items-center mt-5">
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-computer-keyboard-computer-mouse-logitech-gaming-k-keyboard-decoration-design-vector-5a934232ebbc69.9508068215196001789656.png" width="130px" height="100%" alt="">
+      </div>
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-fax-minsk-panasonic-thermal-paper-digital-enhanced-fax-machine-images-5b1d3f8b49a2c5.9548231615286434673016.png" width="130px" height="100%" alt="">
+      </div>
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-junk-fax-paper-photocopier-machine-fax-machine-5a73a90f1959a7.5651289515175293591038.png" width="130px" height="100%" alt="">
+      </div>
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-laser-printing-ricoh-fax-multi-function-printer-5b21bd46cbad98.0289651115289377988343.png" width="130px" height="100%" alt="">
+      </div>
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-multi-function-printer-brother-industries-brother-dcp-7-6-d-imprimante-multifonction-laser-monochr-5bab3b9c6b6e44.20079422153794857244.png" width="130px" height="100%" alt="">
+      </div>
+
+      <div class="col-2">
+        <img src="../../../assets/img/kisspng-multi-function-printer-inkjet-printing-canon-autom-color-printer-5a77a6aec2c8c3.9515433815177908947978.png" width="130px" height="100%" alt="">
+      </div>
+
+    </div>
+
+    <div class="d-flex justify-content-center mt-4">
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+      <div class="col-2 RelateFont"> متن لورم ایپسوم </div>
+    </div>
+
+    <div class="d-flex justify-content-center mt-3">
+      <div class="col-2"> 1.900 تومان </div>
+      <div class="col-2"> 1.900 تومان </div>
+      <div class="col-2"> 1.900 تومان </div>
+      <div class="col-2"> 1.900 تومان </div>
+      <div class="col-2"> 1.900 تومان </div>
+      <div class="col-2"> 1.900 تومان </div>
+    </div>
+  </div>
+</section>
