--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -2,6 +2,7 @@
 
 <!-- Mahdi's Code -->
 
+<!-- Relative Products -->
 <section class="container border BorderR">
   <div class="p-3">
 
@@ -70,3 +71,95 @@
     </div>
   </div>
 </section>
+
+
+<!-- Exp Section -->
+<section class="container mt-5">
+  <div class="d-flex row"  dir="rtl">
+    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> توضیحات </div>
+    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> معرفی </div>
+    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> مشخصات </div>
+    <hr class="">
+  </div>
+</section>
+
+<!-- Exp Product -->
+<section class="container border BorderR mt-2">
+  <div class="column p-4">
+    <div dir="rtl">
+      <h4 class="RelateFont">Herman نقد فریزر برند</h4>
+    </div>
+
+    <div class="d-flex justify-content-center mt-5">
+      <img src="../../../assets/img/ref01.png" width="800px" height="100%" alt="">
+    </div>
+
+    <div class="d-flex justify-content-center" dir="rtl">
+      <h5 class="mt-5">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
+      </h5>
+    </div>
+  </div>
+</section>
+
+<hr class="container mt-5">
+<!-- Information Section -->
+
+<section class="container  border BorderR">
+  <div class="column p-4">
+    <div class="align-items-center column py-5" dir="rtl">
+      <div dir="rtl">
+        <h5>
+          مشخصات
+        </h5>
+      </div>
+
+      <hr class="d-flex justify-content-center HRBlue01 position-absulote">
+
+      <div class="d-flex bd-example justify-content-flex-start">
+        <h4 class="FontWeight" dir="rtl">ارتفاع</h4>
+      </div>
+
+      <div class="col-2 d-flex bd-example justify-content-flex-start">
+        <h4 class="FontWeight" dir="rtl">عرض</h4>
+      </div>
+
+      <div class="col-2 bd-example">
+        <h4 class="FontWeight" dir="rtl">ارتفاع</h4>
+      </div>
+
+      <div class="col-2 bd-example">
+        <h4 class="FontWeight" dir="rtl">مصرف برق</h4>
+      </div>
+
+      <div class="col-2 bd-example">
+        <h4 class="FontWeight" dir="rtl">عمر باتری</h4>
+      </div>
+
+    </div>
+
+    <div class="justify-content-center flex-direction-column align-items-spcae-around">
+      <div>
+        <h4 class="" dir="rtl">2 متر</h4>
+      </div>
+
+      <div>
+        <h4 class="" dir="rtl">1 متر</h4>
+      </div>
+
+      <div>
+        <h4 class="" dir="rtl">1 متر</h4>
+      </div>
+
+      <div>
+        <h4 class="" dir="rtl">عمر باتری</h4>
+      </div>
+
+      <div>
+        <h4 class="" dir="rtl">عمر باتری</h4>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
