Product Not fixed

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -2,15 +2,202 @@
 
 <!-- Mahdi's Code -->
 
+<!-- Product -->
+
+<div class="">
+
+  <section class="container border">
+
+    <div>
+      <!-- Product img -->
+      <div class="d-flex col-6 mt-3 position-relative" dir="rtl">
+        <div class="d-flex">
+          <img src="../../../assets/img/pngwing.com (7).png" width="400px" height="100%" alt="">
+        </div>
+
+        <div>
+          <div>
+
+          </div>
+
+          <div>
+
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+      </div>
+      <!-- Price -->
+      <div class="col-6 mt-3" dir="rtl">
+        <div>
+          <h4 class="FontWeight"> Herman فریزر برند </h4>
+        </div>
+
+        <div class="">
+          <h6 class="Opacity"> مدل b-147 </h6>
+        </div>
+
+        <div class="d-flex my-4">
+          <div class="d-flex col-4">
+            <h6>  دسته بندی : </h6>
+            <h6 class="BlueColor mx-2"> یخچال </h6>
+          </div>
+
+          <div class="d-flex col-4">
+            <h6 class="">  تولیدکننده : </h6>
+            <h6 class="BlueColor mx-2"> هرمان </h6>
+          </div>
+
+        </div>
+
+        <div class="d-flex">
+
+          <div class="d-flex col-1">
+            <h6> رنگ : </h6>
+          </div>
+
+          <div class="d-flex col-1">
+            <span  class="GrayColor">
+
+            </span>
+          </div>
+
+          <div class="d-flex col-1">
+            <span  class="GoldColor">
+
+            </span>
+          </div>
+
+        </div>
+
+        <hr class="">
+
+        <div>
+          <h5 class="FontWeight"> مشخصات فنی </h5>
+        </div>
+
+        <div class="d-flex">
+          <div class="d-flex my-4">
+            <span class="Dot">
+
+            </span>
+          </div>
+
+          <div class="d-flex col-1 my-3  mx-2">
+            <h6>
+              سردکننده
+            </h6>
+          </div>
+        </div>
+
+        <div class="d-flex  ">
+          <div class="d-flex">
+            <span class="Dot column">
+
+            </span>
+          </div>
+
+          <div class="d-flex col-1 mx-2 column">
+            <h6 class="">
+              بادوام
+            </h6>
+          </div>
+        </div>
+
+        <div class="d-flex">
+          <div class="d-flex">
+            <span class="Dot my-1">
+
+            </span>
+          </div>
+
+          <div class="d-flex col-1  mx-2">
+            <h6 class="d-flex">
+              قوی
+            </h6>
+          </div>
+        </div>
+
+        <hr class="">
+
+        <div class="my-5">
+
+          <div class="d-flex col-4">
+            <h5 class="BlueColor FontWeight01"> 19.000.000 </h5>
+            <h5 class="BlueColor FontWeight01 mx-2 "> تومان </h5>
+          </div>
+
+        </div>
+
+        <hr class="">
+
+        <div class="d-flex">
+
+           <div class="d-flex align-items-center">
+             <h6> تعداد </h6>
+           </div>
+
+           <div class="mx-3">
+              <div class="CountDiv">
+
+                <div class="d-flex align-items-center">
+                  <p>1</p>
+                </div>
+
+                <div class="d-flex align-items-center ArrowCount">
+                  <img class="" src="../../../assets/img/right.png" width="12px" height="100%" alt="">
+                </div>
+
+              </div>
+           </div>
+
+           <div>
+              <div class="Sellbtn overflow-hidden">
+                <div class="d-flex align-items-center justify-content-flex-start">
+                  <div class="Cartbtn">
+                    <div class="d-flex justify-content-center align-items-center">
+                      <img class="d-flex align-items-center" src="../../../assets/img/White_Cart.png" width="20px" height="20px" alt="">
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                      <h5 class="WhiteColor">افزودن به سبد خرید</h5>
+                    </div>
+
+                  </div>
+              </div>
+
+
+              </div>
+           </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+</div>
+
 <!-- Relative Products -->
 <section class="container border BorderR">
   <div class="p-3">
 
     <div dir="rtl">
-      <h5>
-        محصولات مرتبط
-      </h5>
+      <div>
+         <h5>
+           محصولات مرتبط
+         </h5>
+        <div class="position-relative mt-3">
+          <span class="HRBlue"></span>
+        </div>
+      </div>
+
     </div>
+
       <div class="d-flex justify-content-flex-start">
         <span class="d-flex next-pre shadow LeftArrow">
           <img src="../../../assets/img/left.png" width="20px" height="20px">
@@ -20,7 +207,7 @@
           <img src="../../../assets/img/right.png" width="20px" height="20px">
         </span>
 
-        <hr class="d-flex justify-content-center HRBlue position-absulote">
+
       </div>
 
 
@@ -76,9 +263,17 @@
 <!-- Exp Section -->
 <section class="container mt-5">
   <div class="d-flex row"  dir="rtl">
-    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> توضیحات </div>
-    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> معرفی </div>
-    <div  class="d-flex mx-1 justify-content-center align-items-center MidBtn BorderR border"> مشخصات </div>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">معرفی</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">مشخصات</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">توضیحات</a>
+      </li>
+    </ul>
     <hr class="">
   </div>
 </section>
@@ -105,60 +300,59 @@
 <!-- Information Section -->
 
 <section class="container  border BorderR">
-  <div class="column p-4">
-    <div class="align-items-center column py-5" dir="rtl">
-      <div dir="rtl">
-        <h5>
-          مشخصات
-        </h5>
+  <div class=" p-4">
+
+    <div class="" dir="rtl">
+      <h5 class="FontWeight">
+        مشخصات
+      </h5>
+      <div class="d-flex justify-content-flex-start position-relative mt-3">
+        <span class="HRBlue01"></span>
+      </div>
+    </div>
+
+    <div class="align-items-center column my-5" dir="rtl">
+
+
+
+
+      <div class="d-flex bd-example my-3">
+        <div>
+          <h5 class="FontWeight" dir="rtl">ارتفاع</h5>
+        </div>
+          <h5 class="col-2 bd-example mx-5" dir="rtl">2 متر</h5>
       </div>
 
-      <hr class="d-flex justify-content-center HRBlue01 position-absulote">
-
-      <div class="d-flex bd-example justify-content-flex-start">
-        <h4 class="FontWeight" dir="rtl">ارتفاع</h4>
+      <div class="col-2 d-flex bd-example my-3">
+        <div>
+          <h5 class="FontWeight" dir="rtl">ارتفاع</h5>
+        </div>
+          <h5 class="col-4 bd-example mx-5" dir="rtl">2 متر</h5>
       </div>
 
-      <div class="col-2 d-flex bd-example justify-content-flex-start">
-        <h4 class="FontWeight" dir="rtl">عرض</h4>
+      <div class="d-flex col-2 bd-example">
+        <div>
+          <h5 class="FontWeight" dir="rtl">ارتفاع</h5>
+        </div>
+          <h5 class="col-4 bd-example mx-5" dir="rtl">2 متر</h5>
       </div>
 
-      <div class="col-2 bd-example">
-        <h4 class="FontWeight" dir="rtl">ارتفاع</h4>
+      <div class="d-flex col-2 bd-example my-3">
+        <div>
+          <h5 class="FontWeight" dir="rtl">ارتفاع</h5>
+        </div>
+          <h5 class="col-4 bd-example mx-5" dir="rtl">2 متر</h5>
       </div>
 
-      <div class="col-2 bd-example">
-        <h4 class="FontWeight" dir="rtl">مصرف برق</h4>
-      </div>
-
-      <div class="col-2 bd-example">
-        <h4 class="FontWeight" dir="rtl">عمر باتری</h4>
+      <div class="d-flex col-4 bd-example my-3">
+        <div>
+          <h5 class="FontWeight" dir="rtl">ارتفاع</h5>
+        </div>
+          <h5 class="col-2 bd-example mx-5" dir="rtl">2 متر</h5>
       </div>
 
     </div>
 
-    <div class="justify-content-center flex-direction-column align-items-spcae-around">
-      <div>
-        <h4 class="" dir="rtl">2 متر</h4>
-      </div>
-
-      <div>
-        <h4 class="" dir="rtl">1 متر</h4>
-      </div>
-
-      <div>
-        <h4 class="" dir="rtl">1 متر</h4>
-      </div>
-
-      <div>
-        <h4 class="" dir="rtl">عمر باتری</h4>
-      </div>
-
-      <div>
-        <h4 class="" dir="rtl">عمر باتری</h4>
-      </div>
-
-    </div>
 
   </div>
 </section>
