--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,68 @@
-<p>product works!</p>
+<div class="container d-flex justify-content-between">
+    <div>
+        <div>
+            <h4>نظرات</h4>
+            <span></span>
+        </div>
+        <div class="mt-5">
+            <img class="image" src="../../../assets/img/pngwing.com (7).png" alt="">
+        </div>
+        <div class="mt-5">
+            <p>4.6امتیاز</p>
+        </div>
+        <div>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">70%</div>
+              </div>
+
+              <div class="progress mt-3">
+                <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
+              </div>
+
+              <div class="progress mt-3">
+                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">8%</div>
+              </div>
+
+              <div class="progress mt-3">
+                <div class="progress-bar" role="progressbar" style="width: 11%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1%</div>
+              </div>
+
+              <div class="progress mt-3">
+                <div class="progress-bar" role="progressbar" style="width: 11%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1%</div>
+              </div>
+
+        </div>
+    </div>
+    <div>
+        <div>
+            <h4>بخش ثبت نظرات مشتریان</h4>
+            <span></span>
+        </div>
+
+        <div class="mt-5">
+            <div class="d-flex justify-content">
+                <div dir="rtl">
+                    <label for="">نام و نام خانوادگی</label>
+                    <input class="form-control mt-3" type="text">
+                </div>
+                <div dir="rtl">
+                    <label for="">ایمیل</label>
+                    <input class="form-control mt-3" type="text">
+                </div>
+            </div>
+
+            <div dir="rtl">
+                <label for=""> توضیحات</label>
+                <textarea name="" id="" cols="30" rows="10" class="form-control mt-3"></textarea>
+            </div>
+            <div class="d-flex justify-content-between">
+                <span>*****</span>
+                <p>امتیاز بدهید؟</p>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="btn btn-primary mx-3">ثبت</button>
+                <button class="btn btn-primary">بازگشت</button>
+            </div>
+        </div>
+    </div>
+</div>
